--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,8 @@
                   <h1>Selamat Datang</h1>
                   <p>Isi data dulu ya! jangan sampe ketinggalan ya</p>
 
+                 
+                  
                   <% if (typeof errors !== 'undefined'){ %>
                     <div class="alert alert-danger" role="alert">
                       <ul>
@@ -36,7 +38,7 @@
 
                   
                   <div class="text-center mr-3">
-                    <button type="sumbit" class="btn btn-primary ml-2 mt-3 ">Masuk</button>
+                    <button type="sumbit" class="btn btn-primary ml-2 mt-3 ">Daftar</button>
                   </div>
 
                   <div class="text-center mt-3 mr-5">
@@ -53,11 +55,3 @@
             <img src="/gambar/register.jpg" alt="">
           </div>
       </section>
-<!-- 
-     Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html> --> 
